# rust_experiments

alko_patterns/: Cargo.toml
alko_patterns/src/: main.rs
api_example/: Cargo.toml  docker-compose.yml
api_example/migrations/: 20250105_1423_init.sql
api_example/src/: api.rs  error.rs  logger.rs  main.rs  repo.rs
api_example/src/api/: handlers.rs  router.rs
api_example/src/dto/: todo.rs
api_example/src/repo/: pg.rs  system.rs  todo.rs
bloom/: Cargo.toml  README.md
bloom/src/: main.rs
poping/: Cargo.toml  README.md
poping/src/client/: main.rs
poping/src/lib/: poping_lib.rs
poping/src/server/: main.rs
wc/: README.md
wc/src/: main.rs
